# nuxer

./: .gitignore
_back/: pyproject.toml
_back/migrations/: env.py
_back/migrations/versions/: 581bca0205f6_itens_fabzenda.py  b169e1c8fd50_initial_schema.py
_back/src/: main.py
_back/src-bkp/actions/: action.py  fabbank_action.py  fabzenda_action.py
_back/src-bkp/models/entities/: item_loja_entity.py  wallet_entity.py
_back/src-bkp/models/mappers/: echo_mapper.py  user_mapper.py
_back/src-bkp/models/orm/: configs.py  users.py  wallet.py
_back/src-bkp/repositories/: echo_repository.py  fabzenda_repository.py  users_repository.py
_back/src-bkp/runners/: api_runner.py
_back/src-bkp/services/: action_slack_service.py  auth_service.py  echo_service.py  fabzenda_service.py
_back/src/actions/: fabbank_action.py  fabzenda_action.py
_back/src/config/: const.py  logger.py  settings.py
_back/src/domains/auth/: messages.py
_back/src/domains/debriefing/: command_router.py  message.py
_back/src/domains/fabbank/: command_router.py  messages.py
_back/src/domains/fabzenda/: command_router.py  messages.py
_back/src/fabbank/: command_router.py
_back/src/interfaces/presenters/: hints.py
_back/src/repositories/: configs_repository.py  echo_repository.py  fabbank_repository.py
_back/src/routes/: auth.py  root.py  webhooks.py
_back/src/runners/: api_runner.py  assistant_runner.py  schedule_runner.py
_back/src/services/: auth_service.py  echo_service.py  fabzenda_service.py  message_service.py  view_slack_service.py
_back/src/utils/: slack_utils.py
(+157 files in other folders)
